src/style.css
/* ... */
.project-btns > .preview-btn {
  background-color: #dab359;
  color: black;
  border: 1px solid rgb(149, 123, 61);
  box-shadow: 0 1px 2px 0 rgba(218, 179, 89, .8);
}

.project-btns > *:hover {
  background-color: #0f0f0f;
}

.project-btns > .preview-btn:hover {
  background-color: #f1c661;
}

.hide {
  position: absolute;
  top: 50px;
  visibility: hidden;
  opacity: 0;
}

.show {
  opacity: 1;
}

.arrows-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.arrows-container > svg {
  fill: rgba(0, 0, 0, .7);
  width: 10%;
  height: 10%;
  filter: drop-shadow(0 0 10px rgba(255, 255, 255, 1));
  transition: transform .2s;
}

.grow {
  transform: scale(1.3);
}

main > .contact-section {
  width: 100%;
  padding-left: 50px;
  padding-right: 50px;
}

.hr-and-glow-container {
  position: relative;
}

.contact-section .email-glow-container {
  position: absolute;
  top: 0;
  display: flex;
  justify-content: center;
  width: 100%;
  opacity: .7;
  z-index: -1;
}

.contact-section .email-glow-container img {
  width: 100%;
}

.contact-section > .contact-related-container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.contact-related-container > h1 {
  text-align: center;
  margin: 50px 0;
  font-family: "Indivisible", "Inter", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  font-weight: 700;
  background: linear-gradient(to bottom, #fdf8c6, #c78d3e);
  -webkit-background-clip: text;
  color: transparent;
  z-index: 0;
  cursor: pointer;
  user-select: none;
  animation: growing-up-and-down 15s ease-in-out infinite;
}
.contact-related-container > .links-container {
  display: flex;
  justify-content: space-evenly;
  width: 80%;
}

.links-container > .link-container {
  display: flex;
  align-items: center;
  width: min-content;
  cursor: pointer;
  padding-left: 50px;
  padding-right: 50px;
  gap: 20px;
}

.links-container a {
  text-decoration: none;
}

.contact-related-container > .links-container svg {
  fill: white;
  max-width: 48px;
  min-height: 48px;
}

.links-container > .link-container#instagram {
  justify-self: end;
}

.copied-pop-up-container {
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 90px;
  height: 40px;
  background-color: rgba(2, 2, 2, 0.7);
  border-radius: 10%;
  border: 1px solid rgba(255, 255, 255, 0.27);
  backdrop-filter: blur(10px);
}

.copied-pop-up-container > p {
  margin: 0;
  color: white;
  font-weight: 500;
  font-size: 1.1rem;
}

footer {
  display: flex;
  justify-content: space-around;
  align-items: center;
  max-width: 100vw;
  width: 100vw;
  height: 60px;
  margin-bottom: 0;
  background-color: rgb(8, 8, 8);
  border-top: 1px solid rgb(31, 31, 31);
}

footer > p {
  font-size: initial;
  margin: 0;
}

@keyframes growing-up-and-down {
  0% {
    transform: scale(1) rotate(0);
  }
  12.5% {
    transform: scale(.95) rotate(1deg);
  }
  25% {
    transform: scale(1) rotate(2deg);
  }
  37.5% {
    transform: scale(.95) rotate(1deg);
  }
  50% {
    transform: scale(1) rotate(0);
  }
  62.5% {
    transform: scale(.95) rotate(-1deg);
  }
  75% {
    transform: scale(1) rotate(-2deg);
  }
  87.5% {
    transform: scale(.95) rotate(-1deg);
  }
  100% {
    transform: scale(1) rotate(0);
  }
}

@media screen and (max-width: 1600px) {
  main > .contact-section {
    box-sizing: border-box;
  }
}

@media screen and (max-width: 1200px) {
  h1 {
    font-size: 4.5rem;
  }

  h2 {
    font-size: 4rem;
  }

  nav > .links-container {
    gap: 60px;
  }

  .about-section .paragraphs-container {
    min-width: auto;
  }

  .about-section .wallpaper-container {
    display: none;
  }

  .animated-h2-container {
    margin: 60px 0;
  }

  .animated-h2-container > .h2-container {
    height: 70px;
  }

  .current-project-container {
    display: flex;
    flex-direction: column;
  }

  .img-slider-container {
    min-width: auto;
  }

  .project-date-container {
    align-self: center;
  }

  .contact-related-container > .links-container > .link-container {
    gap: 10px;
    padding-left: 25px;
    padding-right: 25px;
  }

  .contact-related-container > .links-container p {
    font-size: 1.2rem;
  }

  .copied-pop-up-container {
    width: 75px;
    height: 35px;
  }

  .copied-pop-up-container > p {
    font-size: .9rem;
  }

  footer > p {
    font-size: .8rem;
  }
}

@media screen and (max-width: 800px) {
  h1 {
    font-size: 3.5rem;
  }

  main > nav {
    height: 60px;
  }

  nav > h3 {
    font-size: 1.5rem;
  }

  nav > .links-container {
    gap: 40px;
  }

  nav > .links-container h3 {
    font-size: 1rem;
  }
}
/* ... */

